# geo-encodings

./: 99-sandbox.ipynb  LICENSE  README.md  keep  pyproject.toml
demos/: demo.py
keep/: 01-mppe-basic-idea.ipynb
notebooks/: 01-mppe-basic-idea.ipynb  02-div-basic-idea.ipynb  03-mpp-and-div.ipynb  10-shape-clustering-simple.ipynb  20-overlapping-shape-similarity.ipynb  30-cosine-distance-demo.ipynb  40-continuity-checks.ipynb  50-decoding-explorations.ipynb  99-sandbox.ipynb
src/geo_encodings/: __init__.py  dev.ipynb  encoders.py  utilities.py  vis.py
src/geo_encodings/.ipynb_checkpoints/: dev-checkpoint.ipynb
src/odyssey_geo/: encoders.py  encoders_bad.py
